--- a/Task 1 ~ Prediction using supervised ML.ipynb
+++ b/Task 1 ~ Prediction using supervised ML.ipynb
@@ -367,11 +367,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58a29ecd",
+   "id": "fa2c8b6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#You can also test with your own data\n",
+    "# You can also test with your own data\n",
     "Hours = 9.25\n",
     "own_pred = model.predict([[Hours]])\n",
     "\n",
@@ -422,11 +422,19 @@
     "print('R-squared Error:',\n",
     "      metrics.r2_score(Y_test, Y_pred))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b481050c",
+   "metadata": {},
+   "source": [
+    "#                             THANK YOU"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -440,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
